# legal-discovery-intelligence-graph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  keep-alive.yml  portfolio-dispatch.yml
.streamlit/: config.toml  secrets.toml.example
architecture/: system.mmd
artifacts/: extraction_metrics.json  retrieval_metrics.json
docs/: DATA_AND_EVALUATION.md  DATA_MODEL.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HANDOFF.md  PROJECT_CONTEXT.md  SCALING.md  STATE.md  architecture.md  decisions.md  product.md  roadmap.md
docs/standards/: 01_Engineering_Constitution.md  02_Python_Standards.md  04_AI_Engineering_Standards.md  05_Git_GitHub_Workflow.md  07_Portfolio_Standards.md  09_Debugging_Playbook.md  10_Deployment_Standards.md
evidence/deployment/: live-check.json
portfolio/: project.json  release.json
portfolio/assets/: system.freshness.json
portfolio/assets/technology/: ATTRIBUTION.md  index.json
scripts/: bootstrap_data.py  evaluate_extraction.py  evaluate_flags.py  evaluate_retrieval.py  index_pgvector.py  ingest_files.py  load_neo4j.py  project-presentation.mjs  verify_deployment.py
src/legal_discovery_graph/: __init__.py  config.py  ids.py  models.py
src/legal_discovery_graph/datagen/: __init__.py  bootstrap.py  composer.py  generator.py  scenario.py
src/legal_discovery_graph/evaluation/: __init__.py  extraction_eval.py  retrieval_eval.py
src/legal_discovery_graph/extraction/: __init__.py  events.py  extractor.py  ner.py  patterns.py  resolution.py
src/legal_discovery_graph/graph/: __init__.py  loader.py  store.py
src/legal_discovery_graph/ingestion/: __init__.py  chunker.py  pipeline.py
src/legal_discovery_graph/ingestion/readers/: __init__.py  _common.py  docx.py  eml.py  pdf.py
src/legal_discovery_graph/retrieval/: __init__.py  embeddings.py  hybrid.py  retriever.py  store.py
src/legal_discovery_graph/review/: __init__.py  flags.py
src/legal_discovery_graph/ui/: __init__.py  backend.py  figures.py  presenters.py  streamlit_app.py
src/legal_discovery_graph/webapp/: __init__.py  figures.py  routes.py  scores.py
src/legal_discovery_graph/webapp/static/css/: theme.css
src/legal_discovery_graph/webapp/templates/: _figure.html  _glossary.html  audit.html  base.html  case.html  document.html  evaluation.html  graph.html  investigate.html  timeline.html
tests/: test_datagen.py  test_embeddings_parity.py  test_evaluation.py  test_extraction.py  test_flags.py  test_graph.py  test_hybrid.py  test_ingestion.py  test_package.py  test_readers.py  test_retrieval.py  test_ui.py  test_webapp.py
