[project]
name = "legal-discovery-graph"
version = "0.1.0"
description = "Graph RAG eDiscovery investigation platform: entity extraction, pgvector semantic retrieval, Neo4j relationship analysis, and a Streamlit investigation dashboard over synthetic discovery documents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Vaibhav Khurana" }]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.59",
    "pandas>=2.2",
    "plotly>=5.24",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "neo4j>=5.24",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "gunicorn>=23",
    "torch>=2.13",
]

[dependency-groups]
# The spaCy model is pinned as a direct wheel so extraction is reproducible with no
# runtime downloads. It lives in the dev group because extraction/evaluation run at
# index time on the dev machine and in CI — never inside the deployed Streamlit app —
# keeping it out of the exported requirements.txt.
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_discovery_graph"]

[tool.uv]
required-version = ">=0.5"

# Deployed hosts (Render, Streamlit Cloud) are CPU-only Linux boxes; the default
# PyPI torch wheel drags in multi-GB CUDA packages there. Pin Linux to the CPU
# wheel index; macOS/dev resolution is unaffected.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]

[tool.ruff.lint.isort]
known-first-party = ["legal_discovery_graph"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is expected in tests
# Seedable, reproducible synthetic-data generation is the purpose of this package;
# `random` is used deliberately and never for security.
"src/legal_discovery_graph/datagen/*" = ["S311"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
